--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="flex-container">
+<div class="flex-container border-top">
     <div class="footer">
     {{ $footerContent := readFile "content/footer.md" }}
     {{ $footerContent | markdownify }}
