--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -14,3 +14,8 @@
       width: 50%; 
     }
   }
+
+  .border-top {
+    border-top: 1px solid var(--color);
+    margin-top: var(--space-unit);
+  }
