--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -1,24 +1,48 @@
-// Flex Items——————————————————————————————————————————————
+// ———————————————————————————— Flex Items
 .flex-item {
   max-width: calc(100% - var(--space-unit));
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
+  gap: calc(var(--space-unit) / 2);
 }
 
-.flex-item:focus {
+.flex-item:focus, .navigable-item:focus, :focus {
   outline: none;
 }
 
 #assortment {
   align-items: flex-start;
+  justify-content: left;
 }
 
-// Images——————————————————————————————————————————————
-.image-container {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: calc(var(--space-unit) / 2);
-  align-items: flex-start;
+#totalMdFiles {
+  display: none;
+}
+
+// ———————————————————————————— Images
+img {
+  position: relative;
+  display: block;
+  height: auto;
+  background-position: 0 0;
+}
+
+.image-background {
+  position: relative;
+  display: inline-block; 
+  background-image: radial-gradient(var(--color) 1px, var(--background-color) 0);  
+  background-size: 3px 3px;
+  background-position: 0 0;
+}
+
+.image-background img {
+  width: 100%; 
+  object-fit: cover; 
+}
+
+.image-background:hover .overlay-caption {
+  opacity: 1;
 }
 
 .image-item img { 
@@ -36,36 +60,11 @@
   opacity: 0;
 }
 
-.image-background {
-  position: relative;
-  display: inline-block; 
-  background-image: radial-gradient(var(--color) 1px, var(--background-color) 0);  
-  background-size: 3px 3px;
-  background-position: 0 0;
+.navigable-item.active .project-content {
+  margin: 0; 
 }
 
-.image-background img {
-  display: block;
-  width: 100%; 
-  height: auto; 
-  object-fit: cover; 
-}
-
-.image-background:hover .overlay-caption {
-  opacity: 1;
-}
-
-img {
-  position: relative;
-  height: auto;
-  display: block;
-  background-size: 3px 3px;
-  background-position: 0 0;
-}
-// Videos——————————————————————————————————————————————
-
-
-// Fig Number Overlay ——————————————————————————————————————————————
+// ———————————————————————————— Fig Number Overlay
 .overlay-caption {
   position: absolute;
   bottom: 0;
@@ -78,38 +77,17 @@ img {
   opacity: 0;
 }
 
-// Image Caption ——————————————————————————————————————————————
+// ———————————————————————————— Image Caption and Image Description
 .image-caption {
-  padding-bottom: var(--space-unit);
   padding-top: calc(var(--space-unit) / 2);
   opacity: 0;
   display: none;
-  max-width: 600px;
+  max-width: 400px;
   object-fit: contain;
 }
 
-// Project Content——————————————————————————————————————————————
-.project-content { 
-  width: 100%;
-  max-width: 250px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  display: none;
-}
-
-// Navigation ——————————————————————————————————————————————
-.navigable-item.active .project-content {
-  margin: 0; 
-}
-
-.navigable-item:focus {
-  outline: none;
-}
-
-:focus {
-  outline: none;
-}
-
-#totalMdFiles {
-  display: none;
+.project-description {
+  margin-top: var(--space-unit);
+  padding-bottom: var(--space-unit);
+  border-bottom: 1px solid var(--color);
 }
