--- a/assets/scss/_tide.scss
+++ b/assets/scss/_tide.scss
@@ -5,24 +5,25 @@
   width: 100%;
   transition: opacity 5s;
   background-color: #2e6469;
-  opacity: 0;
+  opacity: 1;
   z-index: 1000;
   mix-blend-mode: multiply;
   backdrop-filter: url(#filter) blur(4px);
   pointer-events: none;
 }
 
-#screensaver.active {
+#screensaver.screensaver-active {
   opacity: 1;
   pointer-events: all;
 }
+
 
 .tide-info {
   @include aulac-styles;
   text-align: left;
   font-size: $font-size-base;
   line-height: $line-height-base;
-  color: white;
+  color: black;
   padding-top: var(--space-unit);
   padding-left: var(--space-unit);
   backdrop-filter: none;
