--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,8 @@
+Adam Taylor O'Reilly
+I'm a website!
+<!---
 {{ define "main" }}
 {{- partial "header.html" . -}}    
 {{- partial "projects.html" . -}}        
 {{ end }}
+--->
