--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     width: 100%; 
-    padding-top: var(--space-unit);
+    padding-top: calc(var(--space-unit) * 2);
   }
   
   @media(min-width: 600px) { 
