--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,7 @@
+Hello cool world
+<!---
 {{ define "main" }}
 {{- partial "header.html" . -}}    
 {{- partial "projects.html" . -}}        
 {{ end }}
-
+--->
